Fix T62280: driver functions added in load_post broken after recent changes.

Evaluate the dependency graph a bit later still. This kind of worked before
because it was using the drive namespace from the previously loaded .blend
file but that's of course wrong.